--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <title>Studio</title>
   </head>
   <body>
-    <!-- <div class="container"> -->
     <header class="navigation-block">
       <nav class="navigation">
         <a href="index.html" class="logo"><span class="logo-colored">WEB</span>STUDIO</a>
@@ -45,8 +44,10 @@
     </header>
     <main>
       <section class="head-hero section">
-        <h1 class="main-heading">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container">
+          <h1 class="main-heading">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
       <section class="features section">
         <ul class="feature-list">
@@ -142,6 +143,5 @@
         solutions.
       </p>
     </footer>
-    <!-- </div> -->
   </body>
 </html>
