--- a/index.html
+++ b/index.html
@@ -50,90 +50,104 @@
         </div>
       </section>
       <section class="features section">
-        <ul class="feature-list">
-          <li>
-            <h3 class="heading">Strategy</h3>
-            <p class="feature">
-              Our goal is to identify the business problem to walk away with the perfect and
-              creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="heading">Punctuality</h3>
-            <p class="feature">
-              Bring the key message to the brand's audience for the best price within the shortest
-              possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="heading">Diligence</h3>
-            <p class="feature">
-              Research and confirm brands that present the strongest digital growth opportunities
-              and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="heading">Technologies</h3>
-            <p class="feature">
-              Design practice focused on digital experiences. We bring forth a deep passion for
-              problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="feature-list">
+            <li>
+              <h3 class="heading">Strategy</h3>
+              <p class="feature">
+                Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="heading">Punctuality</h3>
+              <p class="feature">
+                Bring the key message to the brand's audience for the best price within the shortest
+                possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="heading">Diligence</h3>
+              <p class="feature">
+                Research and confirm brands that present the strongest digital growth opportunities
+                and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="heading">Technologies</h3>
+              <p class="feature">
+                Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="section">
+      <section class="team-goals section">
         <h2 class="heading-2">What Are We Doing</h2>
-        <ul>
-          <li class="photo-card">
-            <img
-              src="./images/pc.jpg"
-              alt="A PC with some statistics on the screen"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="photo-card">
-            <img
-              src="./images/phone_chats.jpg"
-              alt="A phone with some screens with chats on them"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="photo-card">
-            <img
-              src="./images/phone_recommendations.jpg"
-              alt="Recommendations page on a phone screen - The Most Inspiring Places"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="goals">
+            <li class="photo-card">
+              <img
+                src="./images/pc.jpg"
+                alt="A PC with some statistics on the screen"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="photo-card">
+              <img
+                src="./images/phone_chats.jpg"
+                alt="A phone with some screens with chats on them"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="photo-card">
+              <img
+                src="./images/phone_recommendations.jpg"
+                alt="Recommendations page on a phone screen - The Most Inspiring Places"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="section">
-        <h2 class="heading-2">Our Team</h2>
-        <ul>
-          <li class="photo-card crew">
-            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <p class="name">Mark Guerrero</p>
-            <p class="position">Product Designer</p>
-          </li>
-          <li class="photo-card crew">
-            <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
-            <p class="name">Tom Ford</p>
-            <p class="position">Frontend Developer</p>
-          </li>
-          <li class="photo-card crew">
-            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
-            <p class="name">Camila Garcia</p>
-            <p class="position">Marketing</p>
-          </li>
-          <li class="photo-card crew">
-            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <p class="name">Daniel Wilson</p>
-            <p class="position">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team-reveal section">
+        <div class="container">
+          <h2 class="heading-2">Our Team</h2>
+          <ul class="team-cards">
+            <li class="crew">
+              <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
+              <div class="info">
+                <p class="name">Mark Guerrero</p>
+                <p class="position">Product Designer</p>
+              </div>
+            </li>
+            <li class="crew">
+              <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
+              <div class="info">
+                <p class="name">Tom Ford</p>
+                <p class="position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="crew">
+              <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
+              <div class="info">
+                <p class="name">Camila Garcia</p>
+                <p class="position">Marketing</p>
+              </div>
+            </li>
+            <li class="crew">
+              <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
+              <div class="info">
+                <p class="name">Daniel Wilson</p>
+                <p class="position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
