--- a/index.html
+++ b/index.html
@@ -150,12 +150,14 @@
         </div>
       </section>
     </main>
-    <footer>
-      <a href="index.html" class="logo-footer"><span class="logo-colored">WEB</span>STUDIO</a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+    <footer class="reversed-header">
+      <div class="container footer-content">
+        <a href="index.html" class="logo-footer"><span class="logo-colored">WEB</span>STUDIO</a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
