--- a/index.html
+++ b/index.html
@@ -23,24 +23,26 @@
   </head>
   <body>
     <header class="navigation-block">
-      <nav class="navigation">
-        <a href="index.html" class="logo"><span class="logo-colored">WEB</span>STUDIO</a>
-        <ul class="navigation-list">
-          <li>
-            <a href="index.html" class="page">Studio</a>
-          </li>
-          <li>
-            <a href="portfolio.html" class="page">Portfolio</a>
-          </li>
-          <li>
-            <a href="#" class="page">Contacts</a>
-          </li>
+      <div class="container">
+        <nav class="navigation">
+          <a href="index.html" class="logo"><span class="logo-colored">WEB</span>STUDIO</a>
+          <ul class="navigation-list">
+            <li>
+              <a href="index.html" class="page">Studio</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="page">Portfolio</a>
+            </li>
+            <li>
+              <a href="#" class="page">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts">
+          <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+          <li><a href="tel:+11(000)111-11-11" class="contact">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
-      <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-        <li><a href="tel:+11(000)111-11-11" class="contact">+11 (000) 111-11-11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="head-hero section">
@@ -86,7 +88,7 @@
       <section class="team-goals section">
         <h2 class="heading-2">What Are We Doing</h2>
         <div class="container">
-          <ul class="goals">
+          <ul class="goals-list">
             <li class="photo-card">
               <img
                 src="./images/pc.jpg"
