--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="navigation-block">
-      <div class="container">
+      <div class="container revesed-footer">
         <nav class="navigation">
           <a href="index.html" class="logo"><span class="logo-colored">WEB</span>STUDIO</a>
           <ul class="navigation-list">
