--- a/portfolio.html
+++ b/portfolio.html
@@ -22,25 +22,27 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="index.html" class="logo"><span class="logo-colored">WEB</span>STUDIO</a>
-        <ul>
-          <li>
-            <a href="index.html" class="page">Studio</a>
-          </li>
-          <li>
-            <a href="portfolio.html" class="page">Portfolio</a>
-          </li>
-          <li>
-            <a href="#" class="page">Contacts</a>
-          </li>
+    <header class="navigation-block">
+      <div class="container revesed-footer">
+        <nav class="navigation">
+          <a href="index.html" class="logo"><span class="logo-colored">WEB</span>STUDIO</a>
+          <ul class="navigation-list">
+            <li>
+              <a href="index.html" class="page">Studio</a>
+            </li>
+            <li>
+              <a href="portfolio.html" class="page">Portfolio</a>
+            </li>
+            <li>
+              <a href="#" class="page">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts">
+          <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+          <li><a href="tel:+11(000)111-11-11" class="contact">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-        <li><a href="tel:+11(000)111-11-11" class="contact">+11 (000) 111-11-11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <section>
@@ -154,12 +156,14 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html" class="logo-footer"><span class="logo-colored">WEB</span>STUDIO</a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+    <footer class="reversed-header">
+      <div class="container footer-content">
+        <a href="index.html" class="logo-footer"><span class="logo-colored">WEB</span>STUDIO</a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
