--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </header>
     <main>
       <section class="head-hero section">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="main-heading">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
@@ -86,8 +86,8 @@
         </div>
       </section>
       <section class="team-goals section">
-        <h2 class="heading-2">What Are We Doing</h2>
         <div class="container">
+          <h2 class="second-heading">What Are We Doing</h2>
           <ul class="goals-list">
             <li class="photo-card">
               <img
@@ -118,7 +118,7 @@
       </section>
       <section class="team-reveal section">
         <div class="container">
-          <h2 class="heading-2">Our Team</h2>
+          <h2 class="second-heading">Our Team</h2>
           <ul class="team-cards">
             <li class="crew">
               <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
