--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
           <ul class="feature-list">
             <li>
               <h3 class="heading">Strategy</h3>
-              <p class="feature">
+              <p class="feature-text">
                 Our goal is to identify the business problem to walk away with the perfect and
                 creative solution.
               </p>
             </li>
             <li>
               <h3 class="heading">Punctuality</h3>
-              <p class="feature">
+              <p class="feature-text">
                 Bring the key message to the brand's audience for the best price within the shortest
                 possible time.
               </p>
             </li>
             <li>
               <h3 class="heading">Diligence</h3>
-              <p class="feature">
+              <p class="feature-text">
                 Research and confirm brands that present the strongest digital growth opportunities
                 and minimize risk.
               </p>
             </li>
             <li>
               <h3 class="heading">Technologies</h3>
-              <p class="feature">
+              <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for
                 problem-solving.
               </p>
